# opendbc

./: .pre-commit-config.yaml  Dockerfile  acura_ilx_2016_can_generated.dbc  acura_rdx_2018_can_generated.dbc  chrysler_pacifica_2017_hybrid_generated.dbc  faw.dbc  gm_global_a_powertrain_generated.dbc  honda_civic_ex_2022_can_generated.dbc  honda_civic_touring_2016_can_generated.dbc  honda_clarity_hybrid_2018_can_generated.dbc  honda_crv_executive_2016_can_generated.dbc  honda_crv_touring_2016_can_generated.dbc  honda_fit_ex_2018_can_generated.dbc  honda_fit_hybrid_2018_can_generated.dbc  honda_odyssey_exl_2018_generated.dbc  honda_odyssey_extreme_edition_2018_china_can_generated.dbc  hyundai_kia_generic.dbc  pyproject.toml  requirements.txt  toyota_new_mc_pt_generated.dbc  toyota_nodsu_pt_generated.dbc  toyota_tnga_k_pt_generated.dbc
.github/workflows/: tests.yml
can/: common.cc  common.h  common.pxd  common_dbc.h  dbc.cc  dbc_template.cc  packer.cc  parser.cc  process_dbc.py
can/tests/: test_checksums.py
generator/chrysler/: chrysler_pacifica_2017_hybrid.dbc
generator/gm/: gm_global_a_powertrain.dbc
generator/honda/: honda_civic_ex_2022_can.dbc
generator/toyota/: _toyota_2017.dbc
opendbc/can/: common.h  common.pxd  parser.cc  parser_pyx.pyx
opendbc/car/: isotp_parallel_query.py
